--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "engines": {
     "npm": "6.13.4",
-    "node": "vnpm10.19.0"
+    "node": "10.19.0"
   },
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
