--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "git push heroku master"
+    "deploy": "now --prod"
   },
   "eslintConfig": {
     "extends": "react-app"
